# tails.com-code-test

./: .gitignore  Dockerfile  Makefile  Pipfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: main.yml
alembic/: env.py
alembic/versions/: 8149c370bebe_initial_tables.py
app/: __init__.py  config.py  data_queries.py  data_types.py  models.py  utils.py  views.py
app/api_clients/: postcodes_client.py
app/static/: stylesheet.css
app/templates/: list.html  map.html
coding-test/: Dockerfile  README.md  docker-compose.yml
coding-test/app/: config.py
coding-test/app/templates/: base.html
coding-test/tests/: test_utils.py
scripts/: database_populated.py  populate_store_data.py
tests/: conftest.py  test_api.py
tests/test_data/: test_stores.json
